# DSI_BS_Gus_teamrepo

./: .gitignore  Analysis.py  README.md  analysis_config.yml  config.yml  full_code.py  load_data.py  pyproject.toml  system_config.yml  test_Analisys_module.py  user_config.yml
configs/: system_config.yml  user_config.yml
